Adding MVP URL shortener
