# routes/web.php
@@ -3,8 +3,19 @@
 use App\Http\Controllers\URLShortenerController;
 use Illuminate\Support\Facades\Route;
 
-Route::get('/', [URLShortenerController::class, 'index'])->name('home');
+/*
+|--------------------------------------------------------------------------
+| Web Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register web routes for your application. These
+| routes are loaded by the RouteServiceProvider within a group which
+| contains the "web" middleware group. Now create something great!
+|
+*/
 
-Route::get('/add', [URLShortenerController::class, 'showAddForm'])->name('add-url');
+Route::get('/', [URLShortenerController::class, 'index'])->name('dashboard');
 
-Route::get('/{shorten}', [URLShortenerController::class,'redirectToOriginalUrl'])->name('redirect');
+Route::get('/add', [URLShortenerController::class, 'showAddForm'])->name('add-url-view');
+
+Route::get('/{shorten}', [URLShortenerController::class,'showRedirect'])->name('redirect-view');
